5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1577_1326.log
== SUBMITION (2019-03-14 19:02:06) 
-- CODE:
print(95-)
-- EXECUTION TIME:
0.213615
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(95-)
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:02:38) 
-- CODE:
print(40+35)
-- EXECUTION TIME:
0.134631
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
